--- a/index.html
+++ b/index.html
@@ -2,10 +2,50 @@
 <html lang="es">
 <head>
 <meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
 <meta http-equiv="refresh" content="0; url=rustdesk-1.4.2-x86_64.exe">
-<title>Descargando RustDesk...</title>
+<title>Descargando RustDesk - RobertSoftware</title>
+<style>
+    body {
+        font-family: Arial, sans-serif;
+        background-color: #f4f4f9;
+        color: #333;
+        text-align: center;
+        padding: 50px;
+    }
+    .logo {
+        max-width: 200px;
+        margin-bottom: 30px;
+    }
+    .message {
+        font-size: 18px;
+        margin-top: 20px;
+    }
+    .download-link {
+        display: inline-block;
+        margin-top: 15px;
+        padding: 12px 25px;
+        background-color: #007bff;
+        color: white;
+        text-decoration: none;
+        border-radius: 8px;
+        font-weight: bold;
+    }
+    .download-link:hover {
+        background-color: #0056b3;
+    }
+</style>
 </head>
 <body>
-<p>Si la descarga no inicia automáticamente, <a href="rustdesk-1.4.2-x86_64.exe">haz clic aquí</a>.</p>
+
+<img src="logo.png" alt="RobertSoftware" class="logo">
+
+<h1>Descargando RustDesk</h1>
+<p class="message">La descarga debería comenzar automáticamente.</p>
+<p class="message">Si no es así, haz clic en el siguiente botón:</p>
+
+<a href="rustdesk-1.4.2-x86_64.exe" class="download-link">Descargar RustDesk</a>
+
 </body>
 </html>
+
