--- a/index.html
+++ b/index.html
@@ -17,6 +17,11 @@
         max-width: 200px;
         margin-bottom: 30px;
     }
+    .backup-text {
+        font-size: 14px; /* más pequeño */
+        margin-bottom: 10px;
+        color: #555; /* tono más discreto */
+    }
     .message {
         font-size: 18px;
         margin-top: 20px;
@@ -38,6 +43,7 @@
 </head>
 <body>
 
+<p class="backup-text">Respaldado por:</p>
 <img src="logo.png" alt="RobertSoftware" class="logo">
 
 <h1>Descargando RustDesk</h1>
@@ -48,4 +54,3 @@
 
 </body>
 </html>
-
