--- a/index.html
+++ b/index.html
@@ -40,12 +40,12 @@
     .download-link:hover {
         background-color: #0056b3;
     }
-    /* GIF flecha en la esquina superior derecha, movido un poco a la izquierda */
+    /* GIF flecha en la esquina superior derecha, movido más a la izquierda y más grande */
     .arrow-top {
         position: fixed;
         top: 20px;
-        right: 60px;       /* ajusta este valor para mover hacia la izquierda */
-        width: 50px;       /* ajustar tamaño según GIF */
+        right: 100px;   /* más a la izquierda */
+        width: 70px;     /* más grande */
         z-index: 1000;
         pointer-events: none; /* para que no interfiera con clics */
     }
