--- a/rustdesk/index.html
+++ b/rustdesk/index.html
@@ -5,6 +5,7 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <meta http-equiv="refresh" content="0; url=rustdesk-1.4.2-x86_64.exe">
 <title>Descargando RustDesk - RobertSoftware</title>
+<link rel="icon" type="image/png" href="favicon.ico">
 <style>
     body {
         font-family: Arial, sans-serif;
@@ -19,9 +20,9 @@
         margin-bottom: 30px;
     }
     .backup-text {
-        font-size: 14px; /* más pequeño */
+        font-size: 14px;
         margin-bottom: 10px;
-        color: #555; /* tono más discreto */
+        color: #555;
     }
     .message {
         font-size: 18px;
@@ -40,14 +41,14 @@
     .download-link:hover {
         background-color: #0056b3;
     }
-    /* GIF flecha en la esquina superior derecha, movido más a la izquierda y más grande */
+    /* GIF flecha en la esquina superior derecha */
     .arrow-top {
         position: fixed;
         top: 20px;
-        right: 100px;   /* más a la izquierda */
-        width: 70px;     /* más grande */
+        right: 40px;       /* ajusta según quieras mover */
+        width: 60px;       /* tamaño del GIF */
         z-index: 1000;
-        pointer-events: none; /* para que no interfiera con clics */
+        pointer-events: none;
     }
 </style>
 </head>
