--- a/rustdesk/index.html
+++ b/rustdesk/index.html
@@ -3,9 +3,8 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<meta http-equiv="refresh" content="0; url=rustdesk-1.4.2-x86_64.exe">
-<title>Descargando RustDesk - RobertSoftware</title>
-<link rel="icon" type="image/png" href="favicon.ico">
+<title>Descargar RustDesk - RobertSoftware</title>
+<link rel="icon" type="image/png" href="favicon.png">
 <style>
     body {
         font-family: Arial, sans-serif;
@@ -30,7 +29,7 @@
     }
     .download-link {
         display: inline-block;
-        margin-top: 15px;
+        margin: 10px 10px 0 10px;
         padding: 12px 25px;
         background-color: #007bff;
         color: white;
@@ -41,12 +40,11 @@
     .download-link:hover {
         background-color: #0056b3;
     }
-    /* GIF flecha en la esquina superior derecha */
     .arrow-top {
         position: fixed;
         top: 20px;
-        right: 40px;       /* ajusta según quieras mover */
-        width: 60px;       /* tamaño del GIF */
+        right: 40px;
+        width: 60px;
         z-index: 1000;
         pointer-events: none;
     }
@@ -54,17 +52,19 @@
 </head>
 <body>
 
-<!-- GIF flecha apuntando hacia la descarga -->
+<!-- GIF flecha apuntando hacia los botones -->
 <img src="flecha-arriba.gif" alt="" class="arrow-top">
 
 <p class="backup-text">Respaldado por:</p>
 <img src="logo.png" alt="RobertSoftware" class="logo">
 
-<h1>Descargando RustDesk</h1>
-<p class="message">La descarga debería comenzar automáticamente.</p>
-<p class="message">Si no es así, haz clic en el siguiente botón:</p>
+<h1>RustDesk</h1>
+<p class="message">Seleccione la versión correspondiente a su sistema:</p>
 
-<a href="rustdesk-1.4.2-x86_64.exe" class="download-link">Descargar RustDesk</a>
+<a href="rustdesk-1.4.2-x86_64.exe" class="download-link">Descargar para Windows</a>
+<a href="rustdesk-1.4.2-x86_64.dmg" class="download-link">Descargar para macOS</a>
+
+<p class="message">Si la descarga no inicia automáticamente, haga clic en el botón correspondiente.</p>
 
 </body>
 </html>
