--- a/rustdesk/index.html
+++ b/rustdesk/index.html
@@ -59,8 +59,8 @@
 <p class="message">Seleccione su sistema operativo y haga clic en el botón correspondiente:</p>
 
 <div class="button-container">
-    <a href="https://github.com/rustdesk/rustdesk/releases/download/1.4.2/rustdesk-1.4.2-x86_64.exe" class="download-button" target="_blank">Descargar para Windows</a>
-    <a href="https://github.com/rustdesk/rustdesk/releases/download/1.4.2/rustdesk-1.4.2-x86_64.dmg" class="download-button" target="_blank">Descargar para macOS</a>
+    <a href="https://github.com/rustdesk/rustdesk/releases/download/1.4.2/rustdesk-1.4.2-x86_64.exe" class="download-button">Descargar para Windows</a>
+    <a href="https://github.com/rustdesk/rustdesk/releases/download/1.4.2/rustdesk-1.4.2-x86_64.dmg" class="download-button">Descargar para macOS</a>
 </div>
 
 </body>
