--- a/rustdesk/index.html
+++ b/rustdesk/index.html
@@ -6,87 +6,81 @@
 <title>Descargar RustDesk - RobertSoftware</title>
 <style>
     body {
-        font-family: 'Arial', sans-serif;
+        font-family: Arial, sans-serif;
         background-color: #f4f4f9;
         color: #333;
         text-align: center;
         padding: 50px;
         position: relative;
     }
-
     .logo {
         max-width: 200px;
         margin-bottom: 30px;
     }
-
     .backup-text {
         font-size: 14px;
         margin-bottom: 10px;
         color: #555;
     }
-
-    h1 {
-        font-size: 28px;
-        margin-bottom: 20px;
-        font-weight: bold;
-    }
-
     .message {
         font-size: 18px;
-        margin-top: 10px;
-        color: #444;
+        margin-top: 20px;
     }
-
-    .button-container {
-        margin-top: 25px;
-        display: flex;
-        justify-content: center;
-        gap: 20px;
-    }
-
     .download-link {
         display: inline-block;
+        margin: 15px;
         padding: 12px 25px;
         background-color: #007bff;
         color: white;
         text-decoration: none;
         border-radius: 8px;
         font-weight: bold;
-        transition: background-color 0.3s;
+        cursor: pointer;
     }
-
     .download-link:hover {
         background-color: #0056b3;
     }
-
-    /* GIF flecha en la esquina superior derecha */
+    /* GIF flecha oculto por defecto */
     .arrow-top {
         position: fixed;
         top: 20px;
-        right: 60px;   /* puedes ajustar */
-        width: 60px;   /* tamaño del GIF */
+        right: 60px;
+        width: 60px;
         z-index: 1000;
         pointer-events: none;
+        display: none; /* oculto inicialmente */
     }
 </style>
 </head>
 <body>
 
-<!-- GIF flecha apuntando hacia la descarga -->
-<img src="flecha-arriba.gif" alt="" class="arrow-top">
+<!-- GIF flecha -->
+<img src="flecha-arriba.gif" alt="" class="arrow-top" id="downloadGif">
 
 <p class="backup-text">Respaldado por:</p>
 <img src="logo.png" alt="RobertSoftware" class="logo">
 
-<h1>Descargar RustDesk</h1>
+<h1>RustDesk</h1>
 <p class="message">Seleccione su sistema operativo y haga clic en el botón correspondiente:</p>
 
-<div class="button-container">
-    <a href="https://github.com/rustdesk/rustdesk/releases/download/1.4.2/rustdesk-1.4.2-x86_64.exe" class="download-link">Windows</a>
-    <a href="https://github.com/rustdesk/rustdesk/releases/download/1.4.2/rustdesk-1.4.2-x86_64.dmg" class="download-link">macOS</a>
-</div>
+<!-- Botones de descarga -->
+<a href="https://github.com/rustdesk/rustdesk/releases/download/1.4.2/rustdesk-1.4.2-x86_64.exe" 
+   class="download-link" id="btnWin">Descargar para Windows</a>
 
-<p class="message">Si los enlaces no funcionan, asegúrese de tener acceso a Internet y verifique la compatibilidad de su sistema operativo.</p>
+<a href="https://github.com/rustdesk/rustdesk/releases/download/1.4.2/rustdesk-1.4.2-x86_64.dmg" 
+   class="download-link" id="btnMac">Descargar para macOS</a>
+
+<script>
+    // Mostrar GIF al hacer clic en cualquier botón
+    const gif = document.getElementById('downloadGif');
+    const buttons = [document.getElementById('btnWin'), document.getElementById('btnMac')];
+
+    buttons.forEach(btn => {
+        btn.addEventListener('click', () => {
+            gif.style.display = 'block';
+        });
+    });
+</script>
 
 </body>
 </html>
