--- a/rustdesk/index.html
+++ b/rustdesk/index.html
@@ -70,6 +70,11 @@
 <a href="https://github.com/rustdesk/rustdesk/releases/download/1.4.2/rustdesk-1.4.2-x86_64.dmg" 
    class="download-link" id="btnMac">Descargar para macOS</a>
 
+<p class="message" style="margin-top: 30px; font-size:16px; color:#555;">
+    Todos los archivos están verificados y listos para su descarga. 
+    Gracias por confiar en RobertSoftware para sus herramientas de escritorio remoto.
+</p>
+
 <script>
     // Mostrar GIF al hacer clic en cualquier botón
     const gif = document.getElementById('downloadGif');
