--- a/rustdesk/index.html
+++ b/rustdesk/index.html
@@ -4,6 +4,7 @@
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>Descargar RustDesk - RobertSoftware</title>
+<link rel="icon" href="favicon.ico" type="image/x-icon">
 <style>
     body {
         font-family: Arial, sans-serif;
@@ -22,9 +23,6 @@
         margin-bottom: 10px;
         color: #555;
     }
-    h1 {
-        margin-bottom: 10px;
-    }
     .message {
         font-size: 18px;
         margin-top: 20px;
@@ -32,6 +30,7 @@
     .download-link {
         display: inline-flex;
         align-items: center;
+        justify-content: center;
         gap: 10px;
         margin: 15px;
         padding: 12px 25px;
@@ -41,12 +40,14 @@
         border-radius: 8px;
         font-weight: bold;
         cursor: pointer;
-        transition: background-color 0.3s;
     }
     .download-link:hover {
         background-color: #0056b3;
     }
-    /* GIF flecha oculto por defecto */
+    .download-link img {
+        width: 24px;
+        height: 24px;
+    }
     .arrow-top {
         position: fixed;
         top: 20px;
@@ -54,20 +55,13 @@
         width: 60px;
         z-index: 1000;
         pointer-events: none;
-        display: none;
+        display: none; /* oculto inicialmente */
     }
     footer {
         margin-top: 50px;
         font-size: 14px;
         color: #555;
         text-align: center;
-    }
-    footer a {
-        color: #007bff;
-        text-decoration: none;
-    }
-    footer a:hover {
-        text-decoration: underline;
     }
 </style>
 </head>
@@ -81,25 +75,16 @@
 
 <h1>RustDesk</h1>
 <p class="message">Seleccione su sistema operativo y haga clic en el botón correspondiente:</p>
-<p class="message">Su descarga es segura y confiable. Para soporte técnico o consultas, contáctenos.</p>
 
-<!-- Botones de descarga -->
+<!-- Botones de descarga con iconos -->
 <a href="https://github.com/rustdesk/rustdesk/releases/download/1.4.2/rustdesk-1.4.2-x86_64.exe" 
    class="download-link" id="btnWin">
-   <!-- Icono Windows SVG -->
-   <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" fill="white" viewBox="0 0 24 24">
-      <path d="M0 3.75v8.25h10v-10h-10v1.75zm0 10.5v8.25h10v-10h-10v1.75zm11 0v10h13v-10h-13v1.75zm0-10v8.25h13v-10h-13v1.75z"/>
-   </svg>
-   Descargar para Windows
+   <img src="windows.svg" alt="Windows"> Descargar para Windows
 </a>
 
 <a href="https://github.com/rustdesk/rustdesk/releases/download/1.4.2/rustdesk-1.4.2-x86_64.dmg" 
    class="download-link" id="btnMac">
-   <!-- Icono MacOS SVG (Apple) -->
-   <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" fill="white" viewBox="0 0 24 24">
-       <path d="M16.365 1.43c-.567.677-1.183 1.234-1.85 1.668-.66.43-1.387.795-2.17 1.093-.723.272-1.48.464-2.27.565-.064-.497-.14-.964-.228-1.395-.098-.48-.197-.945-.297-1.392 1.008-.074 1.928-.31 2.762-.706.836-.397 1.575-.98 2.22-1.75.593.79 1.134 1.55 1.62 2.28zM12.001 5.093c-3.83 0-5.464 3.065-5.464 6.1 0 2.6 1.674 6.112 5.464 6.112s5.437-3.518 5.437-6.112c0-3.035-1.608-6.1-5.437-6.1z"/>
-   </svg>
-   Descargar para macOS
+   <img src="macos.svg" alt="macOS"> Descargar para macOS
 </a>
 
 <script>
@@ -117,7 +102,7 @@
 <footer>
     <p>Distribución segura de RustDesk por <strong>Robert Software</strong></p>
     <p>© 2025 Robert Software. Todos los derechos reservados.</p>
-    <p>Contacto: <a href="mailto:rs.robertsoftware@gmail.com">rs.robertsoftware@gmail.com</a> | Tel: 945482880</p>
+    <p>Para soporte técnico o consultas, contáctenos a través de WhatsApp: <a href="https://wa.me/51945482880" target="_blank">945482880</a> o correo: <a href="mailto:rs.robertsoftware@gmail.com">rs.robertsoftware@gmail.com</a></p>
 </footer>
 
 </body>
