--- a/rustdesk/index.html
+++ b/rustdesk/index.html
@@ -74,17 +74,17 @@
 <img src="logo.png" alt="RobertSoftware" class="logo">
 
 <h1>RustDesk</h1>
-<p class="message">Seleccione su sistema operativo y haga clic en el botón correspondiente:</p>
+<p class="message">Seleccione su sistema operativo y haga clic en el botón correspondiente. La descarga se iniciará en esta misma página:</p>
 
 <!-- Botones de descarga con iconos -->
 <a href="https://github.com/rustdesk/rustdesk/releases/download/1.4.2/rustdesk-1.4.2-x86_64.exe" 
-   class="download-link" id="btnWin">
-   <img src="windows.svg" alt="Windows"> Descargar para Windows
+   class="download-link" id="btnWin" download>
+   <img src="windows.png" alt="Windows"> Descargar para Windows
 </a>
 
 <a href="https://github.com/rustdesk/rustdesk/releases/download/1.4.2/rustdesk-1.4.2-x86_64.dmg" 
-   class="download-link" id="btnMac">
-   <img src="macos.svg" alt="macOS"> Descargar para macOS
+   class="download-link" id="btnMac" download>
+   <img src="macos.png" alt="macOS"> Descargar para macOS
 </a>
 
 <script>
@@ -102,7 +102,10 @@
 <footer>
     <p>Distribución segura de RustDesk por <strong>Robert Software</strong></p>
     <p>© 2025 Robert Software. Todos los derechos reservados.</p>
-    <p>Para soporte técnico o consultas, contáctenos a través de WhatsApp: <a href="https://wa.me/51945482880" target="_blank">945482880</a> o correo: <a href="mailto:rs.robertsoftware@gmail.com">rs.robertsoftware@gmail.com</a></p>
+    <p>Para soporte técnico o consultas, contáctenos a través de WhatsApp: 
+       <a href="https://wa.me/51945482880">945482880</a> o correo: 
+       <a href="mailto:rs.robertsoftware@gmail.com">rs.robertsoftware@gmail.com</a>
+    </p>
 </footer>
 
 </body>
