--- a/rustdesk/index.html
+++ b/rustdesk/index.html
@@ -109,12 +109,12 @@
 <!-- Botones de descarga -->
 <a href="https://github.com/rustdesk/rustdesk/releases/download/1.4.2/rustdesk-1.4.2-x86_64.exe" 
    class="download-link" id="btnWin" download>
-   <img src="windows.png" alt="Windows"> Descargar para Windows
+   <img src="windows.svg" alt="Windows"> Descargar para Windows
 </a>
 
 <a href="https://github.com/rustdesk/rustdesk/releases/download/1.4.2/rustdesk-1.4.2-x86_64.dmg" 
    class="download-link" id="btnMac" download>
-   <img src="macos.png" alt="macOS"> Descargar para macOS
+   <img src="macos.svg" alt="macOS"> Descargar para macOS
 </a>
 
 <script>
