--- a/rustdesk/index.html
+++ b/rustdesk/index.html
@@ -3,64 +3,64 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Descargar RustDesk - Robert Software</title>
+<title>Descargar RustDesk - RobertSoftware</title>
 <link rel="icon" href="favicon.ico" type="image/x-icon">
 <style>
-    /* Reset básico */
-    * { margin: 0; padding: 0; box-sizing: border-box; }
+    html, body {
+        height: 100%;
+        margin: 0;
+        padding: 0;
+        background-color: #f4f4f9; /* mismo color que tenías */
+    }
 
     body {
-        font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-        background: linear-gradient(135deg, #f0f4f8, #d9e2ec);
+        font-family: Arial, sans-serif;
         color: #333;
         text-align: center;
-        padding: 60px 20px;
+        padding: 50px 0 0 0; /* solo padding superior */
+        position: relative;
+        min-height: 100%;
+        box-sizing: border-box;
     }
 
     .logo {
-        max-width: 180px;
-        margin-bottom: 40px;
+        max-width: 200px;
+        margin-bottom: 30px;
     }
 
-    h1 {
-        font-size: 48px;
-        font-weight: 700;
-        margin-bottom: 15px;
-        color: #1f2937;
+    .backup-text {
+        font-size: 14px;
+        margin-bottom: 10px;
+        color: #555;
     }
 
     .message {
-        font-size: 20px;
-        margin-bottom: 40px;
-        color: #4b5563;
+        font-size: 18px;
+        margin-top: 20px;
     }
 
     .download-link {
         display: inline-flex;
         align-items: center;
         justify-content: center;
-        gap: 12px;
+        gap: 10px;
         margin: 15px;
-        padding: 14px 28px;
-        font-size: 18px;
-        font-weight: 600;
+        padding: 12px 25px;
+        background-color: #007bff;
+        color: white;
         text-decoration: none;
-        border-radius: 12px;
-        color: #fff;
-        background: linear-gradient(135deg, #3b82f6, #2563eb);
-        box-shadow: 0 8px 20px rgba(0,0,0,0.15);
-        transition: all 0.3s ease;
-    }
-
-    .download-link img {
-        width: 32px;
-        height: 32px;
+        border-radius: 8px;
+        font-weight: bold;
+        cursor: pointer;
     }
 
     .download-link:hover {
-        transform: translateY(-3px);
-        box-shadow: 0 12px 25px rgba(0,0,0,0.2);
-        background: linear-gradient(135deg, #2563eb, #1d4ed8);
+        background-color: #0056b3;
+    }
+
+    .download-link img {
+        width: 24px;
+        height: 24px;
     }
 
     .arrow-top {
@@ -70,25 +70,16 @@
         width: 60px;
         z-index: 1000;
         pointer-events: none;
-        display: none;
+        display: none; /* oculto inicialmente */
     }
 
     footer {
-        margin-top: 60px;
+        background-color: #f4f4f9; /* mismo color que body */
+        margin-top: 50px;
         font-size: 14px;
-        color: #6b7280;
+        color: #555;
         text-align: center;
-        line-height: 1.6;
-    }
-
-    footer a {
-        color: #2563eb;
-        text-decoration: none;
-        font-weight: 500;
-    }
-
-    footer a:hover {
-        text-decoration: underline;
+        padding: 20px 0;
     }
 </style>
 </head>
@@ -97,27 +88,25 @@
 <!-- GIF flecha -->
 <img src="flecha-arriba.gif" alt="" class="arrow-top" id="downloadGif">
 
-<!-- Logo -->
-<img src="logo.png" alt="Robert Software" class="logo">
+<p class="backup-text">Respaldado por:</p>
+<img src="logo.png" alt="RobertSoftware" class="logo">
 
 <h1>RustDesk</h1>
-<p class="message">
-    Seleccione su sistema operativo y haga clic en el botón correspondiente.<br>
-    La descarga se iniciará en esta misma página.
-</p>
+<p class="message">Seleccione su sistema operativo y haga clic en el botón correspondiente. Si la descarga no inicia automáticamente, use los botones de abajo.</p>
 
-<!-- Botones de descarga -->
+<!-- Botones de descarga con iconos -->
 <a href="https://github.com/rustdesk/rustdesk/releases/download/1.4.2/rustdesk-1.4.2-x86_64.exe" 
-   class="download-link" id="btnWin" download>
+   class="download-link" id="btnWin">
    <img src="windows.svg" alt="Windows"> Descargar para Windows
 </a>
 
 <a href="https://github.com/rustdesk/rustdesk/releases/download/1.4.2/rustdesk-1.4.2-x86_64.dmg" 
-   class="download-link" id="btnMac" download>
+   class="download-link" id="btnMac">
    <img src="macos.svg" alt="macOS"> Descargar para macOS
 </a>
 
 <script>
+    // Mostrar GIF al hacer clic en cualquier botón
     const gif = document.getElementById('downloadGif');
     const buttons = [document.getElementById('btnWin'), document.getElementById('btnMac')];
 
@@ -132,7 +121,7 @@
     <p>Distribución segura de RustDesk por <strong>Robert Software</strong></p>
     <p>© 2025 Robert Software. Todos los derechos reservados.</p>
     <p>Para soporte técnico o consultas, contáctenos a través de WhatsApp: 
-       <a href="https://wa.me/51945482880">945482880</a> o correo: 
+       <a href="https://wa.me/51945482880" target="_blank">945482880</a> o correo: 
        <a href="mailto:rs.robertsoftware@gmail.com">rs.robertsoftware@gmail.com</a>
     </p>
 </footer>
